--- a/manifest.json
+++ b/manifest.json
@@ -1,54 +1,54 @@
 {
-    "name": "{{ title }}",
-    "short_name": "{{ short }}",
-    "description": "{{ description }}",
+    "name": "btopro",
+    "short_name": "btopro",
+    "description": "Crazy, abrasive, caring, dreaming the future into existence.",
     "icons": [
         {
-            "src": "{{ logo36x36 }}",
+            "src": "files/haxcms-managed/36x36-IMG_20190823_102434 2.jpg",
             "sizes": "36x36",
             "type": "image\/png",
             "density": "0.75"
         },
         {
-            "src": "{{ logo48x48 }}",
+            "src": "files/haxcms-managed/48x48-IMG_20190823_102434 2.jpg",
             "sizes": "48x48",
             "type": "image\/png",
             "density": "1.0"
         },
         {
-            "src": "{{ logo72x72 }}",
+            "src": "files/haxcms-managed/72x72-IMG_20190823_102434 2.jpg",
             "sizes": "72x72",
             "type": "image\/png",
             "density": "1.5"
         },
         {
-            "src": "{{ logo96x96 }}",
+            "src": "files/haxcms-managed/96x96-IMG_20190823_102434 2.jpg",
             "sizes": "96x96",
             "type": "image\/png",
             "density": "2.0"
         },
         {
-            "src": "{{ logo144x144 }}",
+            "src": "files/haxcms-managed/144x144-IMG_20190823_102434 2.jpg",
             "sizes": "144x144",
             "type": "image\/png",
             "density": "3.0"
         },
         {
-            "src": "{{ logo192x192 }}",
+            "src": "files/haxcms-managed/192x192-IMG_20190823_102434 2.jpg",
             "sizes": "192x192",
             "type": "image\/png",
             "density": "4.0"
         },
         {
-            "src": "{{ logo512x512 }}",
+            "src": "files/haxcms-managed/512x512-IMG_20190823_102434 2.jpg",
             "sizes": "512x512",
             "type": "image\/png",
             "density": "4.0"
         }
     ],
-    "scope": "{{ basePath }}",
-    "start_url": "{{ basePath }}",
+    "scope": "/btopro/",
+    "start_url": "/btopro/",
     "display": "standalone",
-    "theme_color": "{{ hexCode }}",
-    "background_color": "{{ hexCode }}"
+    "theme_color": "#3f51b5",
+    "background_color": "#3f51b5"
 }
