Managed files updated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "btopro",
   "version": "0.12.3",
-  "description": "Crazy, abrasive, caring, dreaming the future into existence.",
+  "description": "Loud, yelly, abrasive, caring; dreaming the future into reality.",
   "main": "index.html",
   "repository": {
     "type": "git",
