--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "btopro",
     "short_name": "btopro",
-    "description": "Crazy, abrasive, caring, dreaming the future into existence.",
+    "description": "Loud, yelly, abrasive, caring; dreaming the future into reality.",
     "icons": [
         {
             "src": "files/haxcms-managed/36x36-IMG_20190823_102434 2.jpg",
