Managed files updated

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "btopro",
+    "name": "bto-pro",
     "short_name": "btopro",
     "description": "Loud, yelly, abrasive, caring; dreaming the future into reality.",
     "icons": [
