Page updated: Why I started hax-camp (item-82b4b5d3-b8cb-4fab-ac71-10b98a0dac91)

--- a/package.json
+++ b/package.json
@@ -128,9 +128,9 @@
   "scripts": {
     "lint": "prettier --check 'system/**/*.php' '*.{html,js,php,yml}'",
     "format": "prettier --write 'system/**/*.php' '*.{html,js,php,yml}'",
-    "build": "polymer build && yarn run terser",
     "terser": "gulp",
-    "dev": "polymer serve --open --entrypoint dist/dev.html",
+    "start": "yarn run dev",
+    "dev": "polymer serve --open --entrypoint dist/dev.html --allow-origin --open-path=/",
     "dev-theme": "cd custom && yarn start"
   }
 }
