--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "btopro",
-  "version": "0.12.3",
+  "version": "1.1.1",
   "description": "Loud, yelly, abrasive, caring; dreaming the future into reality.",
   "main": "index.html",
   "repository": {
@@ -123,7 +123,8 @@
     "@prettier/plugin-php": "^0.11.0",
     "prettier": "^1.16.4",
     "gulp": "^4.0.2",
-    "gulp-terser": "^1.2.0"
+    "gulp-terser": "^1.2.0",
+    "rollup-plugin-terser": "5.2.0"
   },
   "scripts": {
     "lint": "prettier --check 'system/**/*.php' '*.{html,js,php,yml}'",
