--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,6 +31,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Run a yarn or npm command
+        uses: Adzz/yarn_command_action@v2.0.0
+        with:
+          package-manager: npm
+          command: npm run gh-pages
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
