--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,7 +35,7 @@ jobs:
         uses: Adzz/yarn_command_action@v2.0.0
         with:
           package-manager: npm
-          command: npm run gh-pages
+          command: gh-pages
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
