--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Run a yarn or npm command
         uses: Adzz/yarn_command_action@v2.0.0
         with:
-          package-manager: npm
-          command: gh-pages
+          package-manager: yarn
+          command: yarn run gh-pages
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
