--- a/custom/package.json
+++ b/custom/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "description": "Custom HAXcms additions, either of a theme or other elements you want to use in this site",
   "author": "elmsln",
-  "homepage": "https://github.com/elmsln/haxcms",
+  "homepage": "https://github.com/haxtheweb/haxcms",
   "license": "Apache-2.0",
-  "repository": "https://github.com/elmsln/haxcms",
+  "repository": "https://github.com/haxtheweb/haxcms",
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "start": "yarn run watch",
