--- a/manifest.json
+++ b/manifest.json
@@ -1,60 +1,60 @@
 {
-    "name": "bto-pro",
-    "short_name": "btopro",
-    "description": "Mind of the Information Altruist",
+    "name": "{{ title }}",
+    "short_name": "{{ short }}",
+    "description": "{{ description }}",
     "icons": [
         {
-            "src": "files/haxcms-managed/48x48-1500x500.png",
+            "src": "{{ logo48x48 }}",
             "sizes": "48x48",
             "type": "image\/png",
             "density": "1.0"
         },
         {
-            "src": "files/haxcms-managed/72x72-1500x500.png",
+            "src": "{{ logo72x72 }}",
             "sizes": "72x72",
             "type": "image\/png",
             "density": "1.5"
         },
         {
-            "src": "files/haxcms-managed/96x96-1500x500.png",
+            "src": "{{ logo96x96 }}",
             "sizes": "96x96",
             "type": "image\/png",
             "density": "2.0"
         },
         {
-            "src": "files/haxcms-managed/144x144-1500x500.png",
+            "src": "{{ logo144x144 }}",
             "sizes": "144x144",
             "type": "image\/png",
             "density": "3.0"
         },
         {
-            "src": "files/haxcms-managed/192x192-1500x500.png",
+            "src": "{{ logo192x192 }}",
             "sizes": "192x192",
             "type": "image\/png",
             "density": "4.0"
         },
         {
-            "src": "files/haxcms-managed/256x256-1500x500.png",
+            "src": "{{ logo256x256 }}",
             "sizes": "256x256",
             "type": "image\/png",
             "density": "4.0",
             "purpose": "any"
         },
         {
-            "src": "files/haxcms-managed/512x512-1500x500.png",
+            "src": "{{ logo512x512 }}",
             "sizes": "512x512",
             "type": "image\/png",
             "density": "4.0",
             "purpose": "maskable"
         }
     ],
-    "scope": "/sites/btopro/",
-    "start_url": "/sites/btopro/",
+    "scope": "{{ basePath }}",
+    "start_url": "{{ basePath }}",
     "display": "standalone",
-    "theme_color": "#aeff00",
-    "background_color": "#aeff00",
+    "theme_color": "{{ hexCode }}",
+    "background_color": "{{ hexCode }}",
     "dir": "auto",
-    "lang": "en-US",
+    "lang": "{{ lang }}",
     "orientation": "any",
     "display_override": [
       "window-controls-overlay"
