--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
-  "name": "btopro",
-  "version": "8.0.2",
-  "description": "Mind of the Information Altruist",
+  "name": "{{ short }}",
+  "version": "{{ version }}",
+  "description": "{{ description }}",
   "main": "index.html",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com/elmsln/haxtheweb.git"
-  },
   "author": {
     "name": "btopro"
   },
   "license": "Apache-2.0",
-  "dependencies": {
-    "@haxtheweb/haxcms-elements": "^7.0.15"
-  },
   "private": false,
   "publishConfig": {
     "access": "public"
   },
-  "resolutions": {
-  },
-  "devDependencies": {
-    "@web/dev-server": "0.3.0"
-  },
   "scripts": {
-    "start": "yarn run dev",
-    "dev": "web-dev-server -c web-dev-server.haxcms.config.cjs",
-    "dev-theme": "cd custom && yarn start"
+    "start": "npm run dev",
+    "dev": "npx @haxtheweb/haxcms-nodejs",
+    "dev-theme": "cd custom && npm start"
   }
 }
