--- a/manifest.json
+++ b/manifest.json
@@ -1,60 +1,54 @@
 {
-    "name": "{{ title }}",
-    "short_name": "{{ short }}",
-    "description": "{{ description }}",
+    "name": "btopro",
+    "short_name": "btopro",
+    "description": "",
     "icons": [
-        {
-            "src": "{{ logo48x48 }}",
-            "sizes": "48x48",
-            "type": "image\/png",
-            "density": "1.0"
-        },
-        {
-            "src": "{{ logo72x72 }}",
-            "sizes": "72x72",
-            "type": "image\/png",
-            "density": "1.5"
-        },
-        {
-            "src": "{{ logo96x96 }}",
-            "sizes": "96x96",
-            "type": "image\/png",
-            "density": "2.0"
-        },
-        {
-            "src": "{{ logo144x144 }}",
-            "sizes": "144x144",
-            "type": "image\/png",
-            "density": "3.0"
-        },
-        {
-            "src": "{{ logo192x192 }}",
-            "sizes": "192x192",
-            "type": "image\/png",
-            "density": "4.0"
-        },
-        {
-            "src": "{{ logo256x256 }}",
-            "sizes": "256x256",
-            "type": "image\/png",
-            "density": "4.0",
-            "purpose": "any"
-        },
-        {
-            "src": "{{ logo512x512 }}",
-            "sizes": "512x512",
-            "type": "image\/png",
-            "density": "4.0",
-            "purpose": "maskable"
-        }
+        
+    {
+    "src": "assets/icon-48x48.png",
+    "sizes": "48x48",
+    "type": "image/png",
+    "density": "1.0"
+    },
+    {
+    "src": "assets/icon-72x72.png",
+    "sizes": "72x72",
+    "type": "image/png",
+    "density": "1.5"
+    },
+    {
+    "src": "assets/icon-96x96.png",
+    "sizes": "96x96",
+    "type": "image/png",
+    "density": "2.0"
+    },
+    {
+    "src": "assets/icon-144x144.png",
+    "sizes": "144x144",
+    "type": "image/png",
+    "density": "3.0"
+    },
+    {
+    "src": "assets/icon-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png",
+    "density": "4.0",
+    "purpose": "any maskable"
+    },
+    {
+    "src": "assets/ms-icon-310x310.png",
+    "sizes": "512x512",
+    "type": "image/png",
+    "density": "4.0"
+    }
     ],
-    "scope": "{{ basePath }}",
-    "start_url": "{{ basePath }}",
+    "scope": "/",
+    "start_url": "/",
     "display": "standalone",
-    "theme_color": "{{ hexCode }}",
-    "background_color": "{{ hexCode }}",
+    "theme_color": "#aeff00",
+    "background_color": "#aeff00",
     "dir": "auto",
-    "lang": "{{ lang }}",
+    "lang": "en",
     "orientation": "any",
     "display_override": [
       "window-controls-overlay"
