--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "{{ short }}",
-  "version": "{{ version }}",
-  "description": "{{ description }}",
+  "name": "btopro",
+  "version": "9.0.0",
+  "description": "",
   "main": "index.html",
   "author": {
     "name": "btopro"
