--- a/manifest.json
+++ b/manifest.json
@@ -1,54 +1,60 @@
 {
-    "name": "btopro",
+    "name": "bto-pro",
     "short_name": "btopro",
-    "description": "",
+    "description": "All things btopro on my own blog",
     "icons": [
-        
-    {
-    "src": "assets/icon-48x48.png",
-    "sizes": "48x48",
-    "type": "image/png",
-    "density": "1.0"
-    },
-    {
-    "src": "assets/icon-72x72.png",
-    "sizes": "72x72",
-    "type": "image/png",
-    "density": "1.5"
-    },
-    {
-    "src": "assets/icon-96x96.png",
-    "sizes": "96x96",
-    "type": "image/png",
-    "density": "2.0"
-    },
-    {
-    "src": "assets/icon-144x144.png",
-    "sizes": "144x144",
-    "type": "image/png",
-    "density": "3.0"
-    },
-    {
-    "src": "assets/icon-192x192.png",
-    "sizes": "192x192",
-    "type": "image/png",
-    "density": "4.0",
-    "purpose": "any maskable"
-    },
-    {
-    "src": "assets/ms-icon-310x310.png",
-    "sizes": "512x512",
-    "type": "image/png",
-    "density": "4.0"
-    }
+        {
+            "src": "files/haxcms-managed/48x48-1500x500.jpeg",
+            "sizes": "48x48",
+            "type": "image\/png",
+            "density": "1.0"
+        },
+        {
+            "src": "files/haxcms-managed/72x72-1500x500.jpeg",
+            "sizes": "72x72",
+            "type": "image\/png",
+            "density": "1.5"
+        },
+        {
+            "src": "files/haxcms-managed/96x96-1500x500.jpeg",
+            "sizes": "96x96",
+            "type": "image\/png",
+            "density": "2.0"
+        },
+        {
+            "src": "files/haxcms-managed/144x144-1500x500.jpeg",
+            "sizes": "144x144",
+            "type": "image\/png",
+            "density": "3.0"
+        },
+        {
+            "src": "files/haxcms-managed/192x192-1500x500.jpeg",
+            "sizes": "192x192",
+            "type": "image\/png",
+            "density": "4.0"
+        },
+        {
+            "src": "files/haxcms-managed/256x256-1500x500.jpeg",
+            "sizes": "256x256",
+            "type": "image\/png",
+            "density": "4.0",
+            "purpose": "any"
+        },
+        {
+            "src": "files/haxcms-managed/512x512-1500x500.jpeg",
+            "sizes": "512x512",
+            "type": "image\/png",
+            "density": "4.0",
+            "purpose": "maskable"
+        }
     ],
-    "scope": "/",
-    "start_url": "/",
+    "scope": "/btopro/",
+    "start_url": "/btopro/",
     "display": "standalone",
     "theme_color": "#aeff00",
     "background_color": "#aeff00",
     "dir": "auto",
-    "lang": "en",
+    "lang": "",
     "orientation": "any",
     "display_override": [
       "window-controls-overlay"
